# Theatrical-Players-Refactoring-Kata

./: .gitignore  pyproject.toml
tests/: invoice_unknown_type_plays.json  test_statement.py  unknown_type_plays.json
tests/approved_files/: test_statement.test_statement_with_new_play_types_and_html.approved.txt
theatrical_players/: plays_calculator.py  statement.py  statement_formatter.py
theatrical_players/models/: Invoice.py  Performance.py  Play.py
theatrical_players_refactoring_kata/: formatter.py  plays.py  statement.py
