[tool.poetry]
name = "theatrical-players-refactoring-kata"
version = "0.1.0"
description = ""
authors = ["Jörg Sesterhenn <joerg.sesterhenn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
approvaltests = "^12.0.0"
pytest-approvaltests = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
